# tp_cpp_autum_2020

./: .gitignore  .suppressions-list.txt  .travis.yml  CMakeLists.txt  README.md
IZ-1/: CMakeLists.txt
IZ-1/source/: pet.c
hw-1/source/: pet.c
hw-2/: CMakeLists.txt
hw-2/includes/: multi-process.h  single-process.h  tuple.h
hw-2/source/: main.c  multi-process.c  single-process.c  tuple.c
hw-2/tests/: generate_tests.sh  number-generator.cpp  test1.test  tests.cpp
includes/: pet.h
linters/: run.sh
source/: main.c  pet.c
tests/: tests.cpp
